# C_animation_with_Apple_Metal

./: .gitignore  CMakeLists.txt  README.md
apple_metal_data/: readme.md
src/: MetalMazeRenderer.h  MetalMazeRenderer.mm  MetalRenderer.h  MetalRenderer.mm  README.md  main.cpp  metal_main.mm  metal_maze_main.mm  shaders.metal
src/compute/: compute_kernels.metal  metal_compute_add.mm  metal_compute_reduce.mm
src/maze/: MetalRoomRenderer.h  MetalRoomRenderer.mm  README.md  metal_room_main.mm
src/triangle/: metal_triangle.mm
